--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,251 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+
+:root {
+  --main-color: #3778c2;
+  --second-color: #5fb523;
+  --text-color: #434b54;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body {
+  background-color: rgb(245, 245, 245);
+  height: 100vh;
+}
+
+#splash_screen {
+  height: 100vh;
+}
+
+h1,
+h2 {
+  font-weight: 500;
+  color: var(--text-color);
+  text-align: center;
+  font-size: 23px;
+  text-transform: uppercase;
+}
+
+.header h1,
+.header h2 {
+  padding-bottom: 5px;
+}
+
+#splash_screen h1 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 2rem;
+  letter-spacing: 3px;
+  color: var(--text-color);
+  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.3s ease-in-out;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.field,
+.actions,
+.field_with_errors {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#splash_screen .actions {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+a,
+a:visited {
+  color: inherit;
+}
+
+.categories-ul li,
+.categories-ul a {
+  margin-top: 10px;
+  text-align: center;
+  background-color: #fff;
+  width: 92%;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#splash_screen .actions a {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  width: 95%;
+  padding: 18px 0;
+  font-weight: bolder;
+  color: var(--text-color);
+  font-size: 19px;
+}
+
+#splash_screen .actions a:nth-child(odd) {
+  background-color: #e2e2e2;
+  background-color: var(--main-color);
+  color: var(--text-color);
+}
+
+.form-control {
+  margin-top: 15px;
+}
+
+#categories,
+.form-container,
+.img-amount-container,
+.home-ul {
+  margin-top: 3vh;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 37px;
+}
+
+.input-field {
+  border: none;
+  outline: none;
+  width: 90%;
+  height: 9vh;
+  padding-left: 6px;
+  font-size: 2.5vh;
+  margin-bottom: -9px;
+}
+
+.input-field::placeholder {
+  color: #e2e2e2;
+  padding-left: 6px;
+  font-size: 2.4vh;
+}
+
+.submit-btn {
+  width: 90%;
+  display: inline-block;
+  margin-top: 2vh;
+  padding: 12px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  background-color: #3778c200;
+  color: #434b54a3;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.categories-ul {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 85px;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+}
+
+.categories-ul li p {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.img-amount-container {
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+  padding-top: 1.5vh;
+  padding-bottom: 1.5vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.img-container {
+  height: 80px;
+  width: 80px;
+}
+
+.trans-amount {
+  padding-right: 4%;
+  font-size: 19px;
+  font-weight: 600;
+}
+
+.trans-total-container {
+  display: flex;
+  align-items: center;
+  padding-left: 4%;
+}
+
+.trans-name {
+  margin-left: 3vw;
+  font-size: 18px;
+}
+
+.category-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.nav-container .button_to {
+  padding-right: 4%;
+}
+
+.add-new,
+.add-new-a {
+  background-color: var(--second-color);
+}
+
+.add-new-a {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+.add-new {
+  border: 2px solid rgb(245, 245, 245);
+  color: rgb(245, 245, 245);
+  padding: 15px;
+  margin: 13px;
+  width: 92%;
+  text-transform: uppercase;
+}
